k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cerberus-x
  labels:
    name: cerberus-x
    environment: production
